# 11_ADL

./: .gitignore  README.md  amdgpu-install_6.1.60100-1_all.deb  pyproject.toml
.history/: pyproject_20240510075434.toml  pyproject_20240511091616.toml  pyproject_20240511091620.toml  pyproject_20240511092246.toml  pyproject_20240511092300.toml  pyproject_20240511092301.toml
week1/: Torch_2D_convolutions.ipynb  WandB.ipynb  feedForwardMNIST.ipynb  feedforwardAssignment.ipynb  x_ray_segmentation_ERDA.ipynb
week2/: autoencoders.ipynb  latent_dims.pkl  losses_nn.pkl  losses_pca.pkl
