
[tool.poetry]
name = "11_ADL"
version = "0.1.0"
description = ""
authors = ["Toke Reines <toke.reines@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
wandb = "^0.16.6"
torchvision = "^0.17.2"
ruff = "^0.4.1"
